styles/globals.css
html,
body {
  color: rgb(var(--orange-900));
  padding: 0;
  margin: 0;
  font-family: proxima-nova, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.hideScrollbars {
  overflow: hidden;
}
.websiteWrapper {
  width: 100vw;
  height: 100%;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.mainContainer {
  width: 100%;
  height: 100%;
  padding: 0 0 10rem;
}
.content__header {
  align-items: center;
  display: flex;
  flex-direction: column;
}
.content__error {
  align-items: center;
  display: flex;
  flex-direction: column;
  margin-top: 10rem;
}
.catchPhrase {
  font-size: 3.25rem;
  letter-spacing: .015rem;
  line-height: 4rem;
  max-width: 600px;
  margin-inline: auto;
  margin-top: 8rem;
  margin-bottom: 3rem;
  text-align: center;
}
.customCollection {
  margin-top: -2rem;
  margin-bottom: 2rem;
  margin-inline: auto;
  text-align: center;
  color: rgb(var(--orange-600));
}
.content__successfulSubmit {
  color: rgb(var(--orange-600));
  font-weight: 600;
}
.button__primary {
  background-color: rgb(var(--orange-600));
  border: none;
  border-radius: .8rem;
  box-shadow: 0 .5rem .75rem rgba(var(--orange-200));
  color: rgb(var(--white));
  cursor: pointer;
  font-family: proxima-nova, sans-serif;
  font-size: 1rem;
  font-weight: 800;
  line-height: 1.5rem;
  margin: 2rem 0;
  padding: 1rem 1.5rem;
  transition: all .2s ease-in-out;
}
.button__primary:hover {
  background-color: rgb(var(--orange-650));
}
.content__body {
  position: relative;
  max-width: var(--max-width);
  margin-inline: auto;
}
.content__body__sizer {
  width: calc((100% - 5rem) / 3);
}
.content__body__gutter {
  width: 2.5rem;
}
.content__body__item {
  width: calc((100% - 5rem) / 3);
  margin-bottom: 2.5rem;
}
.content__filterRow {
  margin-top: 5rem;
  margin-bottom: 3rem;
  max-width: var(--max-width);
  margin-inline: auto;
  display: flex;
  gap: 2rem;
  align-items: center;
}
.searchWrapper {
  display: flex;
  align-items: center;
  gap: 0;
  flex: 1;
  & .buttonIcon {
    margin-right: -1.5rem;
    z-index: 11;
    transition: all .2s ease-in-out;
  }
  &:has(.searchInput:focus) {
    & .buttonIcon {
      color: rgb(var(--orange-600));
    }
  }
}
.searchInput {
  width: calc(100% + 1.5rem);
  font-family: proxima-nova, sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  padding: .5rem;
  border: 1px solid rgba(var(--black), 0);
  border-radius: .5rem;
  text-indent: 1.5rem;
  z-index: 10;
  transition: all .2s ease-in-out;
  &:focus {
    outline: none;
    border-color: rgba(var(--orange-600), .3);
  }
  &::placeholder {
    color: rgba(var(--black), .5);
  }
}
.button__secondary {
  background: none;
  border: none;
  display: inline-block;
  color: rgb(var(--orange-900));
  cursor: pointer;
  font-family: proxima-nova, sans-serif;
  font-size: 1rem;
  transition: all .2s ease-in-out;
}
.button__secondary:hover {
  color: rgb(var(--orange-600));
}
.buttonIcon {
  margin-right: .5rem;
}

.tagFilter {
  display: none;
}
.tagFilterButton:hover .tagFilter {
  display: block;
}

/*
  Page styles
*/
.content__page {
  display: block;
  width: 100%;
  max-width: var(--max-read-width);
  margin-inline: auto;
}
.content__page h2.page__title {
  font-size: 3.25rem;
  letter-spacing: .015rem;
  line-height: 4rem;
  max-width: var(--max-read-width);
  margin-top: 8rem;
}
.content__page h1 {
  font-size: 1.5rem;
  letter-spacing: .015rem;
  line-height: 1.75rem;
  max-width: var(--max-read-width);
  margin-top: 5rem;
  margin-bottom: 1.75rem;
}
.content__page p {
  font-size: 1rem;
  line-height: 1.75rem;
  margin-bottom: 1.75rem;
  max-width: 500px;
}
.content__page a {
  color: rgb(var(--orange-600));
  text-decoration: underline;
  transition: all .2s ease-in-out;
}
.content__page a:hover {
  color: rgb(var(--orange-900));
}


.collectionBuilder,
.notification {
  position: fixed;
  bottom: 2rem;
  width: 80%;
  transform: translateX(-50%);
  background-color: rgb(var(--white));
  padding: 1rem;
  margin-left: 50%;
  box-shadow: 0 10px 20px rgba(var(--black), .05), 0 2px 5px rgba(var(--black), .05);
  border: 1px solid rgba(var(--black), .05);
  border-radius: .5rem;
  z-index: 999;
  display: flex;
  align-items: center;
  left: 0;
  gap: 1rem;
  max-width: calc(var(--max-width) + 2rem);
}
.collectionBuilder:has(input:focus) {
  border-color: rgba(var(--orange-600), .3);
  box-shadow: 0 10px 20px rgba(var(--orange-600), .05), 0 2px 5px rgba(var(--orange-600), .05);
}
.collectionBuilder__Buttons {
  display: flex;
  gap: 1rem;
  align-items: center;
  margin-left: auto;
  line-height: 1.5rem;
}
.collectionBuilder .button__primary  {
  margin: 0;
  font-weight: 400;
  line-height: 1.5rem;
  box-shadow: none;
  border-radius: .25rem;
  line-height: 1.5rem;
  display: block;
}
.collectionBuilder .button__secondary {
  padding: 1rem 1.5rem;
  line-height: 1.5rem;
  display: block;
  border: 1px solid rgba(var(--black), .1);
  border-radius: .25rem;
}
.collectionBuilder__input {
  font-family: proxima-nova, sans-serif;
  font-size: 1.25rem;
  line-height: 1.5rem;
  padding: .5rem;
  border: none;
  flex: 1;
}
.collectionBuilder__input:focus {
  outline: none;
}

@media only screen and (max-width: 767px) {
  .collectionBuilder__input {
    margin-bottom: 1rem;
    width: 100%;
  }
  .collectionBuilder {
    flex-direction: column;
    width: 100%;
    bottom: 0;
    border-radius: .5rem .5rem 0 0;
  }
  .collectionBuilder__Buttons {
    display: flex;
    flex-direction: row-reverse;
    gap: 1rem;
    margin: 0;
    align-items: center;
    justify-content: space-between;
    width: 100%;
  }
}

